[build-system]
requires = ["uv_build>=0.7"]
build-backend = "uv_build"

[project]
name = "pytree-utils"
version = "0.1.0"
description = "Nested struct-of-arrays helpers for JAX using equinox"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "equinox>=0.13.6",
    "jax>=0.9.2",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "pytest>=8.0",
]

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = ["tests"]
